feat: enhance public note author metadata and introduce official badge for NoteLib
- Added `displayName` support for user-controlled public author names.
- Backend now distinguishes `isCurrentUser` and `isOfficialAuthor` for viewer-relative badge rendering.
- Updated Public Library and note detail pages to display `By {displayName}` with an `Official` badge for NoteLib content.
- Implemented server-side validation for reserved display names.
- Adjusted tests, documentation, and UI to accommodate new metadata fields and badges.